<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_gravity="center" android:orientation="horizontal" android:background="@color/sim_info_background" android:padding="0dp" android:layout_width="593dp" android:layout_height="wrap_content">
    <ImageView android:id="@+id/empty_for_talkback" android:focusable="true" android:nextFocusLeft="@+id/back" android:nextFocusRight="@+id/back" android:nextFocusUp="@+id/back" android:nextFocusDown="@+id/back" android:layout_width="0dp" android:layout_height="0dp" android:nextFocusForward="@+id/back"/>
    <FrameLayout android:background="@color/chevron_background" android:layout_width="wrap_content" android:layout_height="match_parent">
        <FrameLayout android:id="@+id/back" android:background="@drawable/selectable_border" android:focusable="true" android:nextFocusLeft="@+id/back" android:nextFocusRight="@+id/textFrame" android:nextFocusUp="@+id/back" android:nextFocusDown="@+id/back" android:layout_width="40dp" android:layout_height="match_parent" android:contentDescription="@string/done_a11y" android:nextFocusForward="@+id/textFrame">
            <FrameLayout android:layout_gravity="center" android:background="@color/chevron_background" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="5dp">
                <ImageView android:layout_gravity="center" android:background="@color/chevron_background" android:layout_width="30dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:src="@drawable/chevron_left" android:adjustViewBounds="true"/>
            </FrameLayout>
        </FrameLayout>
    </FrameLayout>
    <FrameLayout android:layout_gravity="center" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@+id/textFrame" android:background="@drawable/selectable_border_small" android:focusable="true" android:nextFocusLeft="@+id/back" android:nextFocusRight="@+id/back" android:nextFocusUp="@+id/textFrame" android:nextFocusDown="@+id/textFrame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/app_credit_a11y" android:nextFocusForward="@+id/back">
            <LinearLayout android:orientation="vertical" android:background="@color/sim_info_background" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="2dp">
                <TextView android:textSize="@dimen/large_text_size" android:textStyle="bold" android:id="@+id/textView3" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/app_created_by"/>
                <TextView android:textSize="@dimen/large_text_size" android:id="@+id/textView4" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/app_credit"/>
                <TextView android:textSize="@dimen/default_text_size" android:id="@+id/textView5" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/app_copyright"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</LinearLayout>
