<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/main_content" android:background="@color/collection_view_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="@integer/control_layout_weight">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:id="@+id/phet_logo" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="@dimen/phet_logo_margin_top" android:layout_marginBottom="@dimen/phet_logo_margin_bottom" android:src="@drawable/phet_logo" android:layout_weight="0.12" android:importantForAccessibility="no"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/search_layout" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.68">
                <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout_focus" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0px" android:layout_height="0px"/>
                    <EditText android:textSize="@dimen/default_text_size" android:textColor="@color/light_theme_text" android:textColorHint="@color/light_theme_hint" android:gravity="center_horizontal" android:id="@+id/search_text" android:background="@drawable/rounded_edittext" android:padding="@dimen/search_padding" android:nextFocusLeft="@+id/search_text" android:nextFocusRight="@+id/grid_view" android:nextFocusUp="@+id/search_text" android:nextFocusDown="@+id/category_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:hint="@string/search_hint" android:maxEms="40" android:ems="15" android:inputType="textPersonName" android:contentDescription="@string/search_hint" android:nextFocusForward="@+id/category_spinner" android:drawableEnd="@drawable/phet_search_icon"/>
                </LinearLayout>
                <TextView android:textSize="@dimen/default_text_size" android:textColor="@color/collection_view_text" android:id="@+id/textView" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/category"/>
                <FrameLayout android:background="@color/collection_view_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp">
                    <Spinner android:id="@+id/category_spinner" android:nextFocusLeft="@+id/category_spinner" android:nextFocusRight="@+id/grid_view" android:nextFocusUp="@+id/search_text" android:nextFocusDown="@+id/grade_level_spinner" android:layout_width="match_parent" android:layout_height="wrap_content" android:nextFocusForward="@+id/grade_level_spinner"/>
                </FrameLayout>
                <TextView android:textSize="@dimen/default_text_size" android:textColor="@color/collection_view_text" android:id="@+id/textView2" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/grade_level"/>
                <FrameLayout android:background="@color/collection_view_background" android:padding="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp">
                    <Spinner android:id="@+id/grade_level_spinner" android:nextFocusLeft="@+id/grade_level_spinner" android:nextFocusRight="@+id/grid_view" android:nextFocusUp="@+id/category_spinner" android:nextFocusDown="@+id/search_toggle" android:layout_width="match_parent" android:layout_height="wrap_content" android:nextFocusForward="@+id/search_toggle"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/settings_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="0.68">
                <TextView android:textSize="@dimen/default_text_size" android:textColor="@color/collection_view_text" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/favorites"/>
                <FrameLayout android:id="@+id/reset_button" android:background="@drawable/selectable_border" android:focusable="true" android:nextFocusLeft="@+id/reset_button" android:nextFocusRight="@+id/grid_view" android:nextFocusUp="@+id/reset_button" android:nextFocusDown="@+id/search_toggle" android:layout_width="match_parent" android:layout_height="wrap_content" android:nextFocusForward="@+id/search_toggle">
                    <TextView android:textSize="@dimen/default_text_size" android:background="@drawable/rounded_button" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/reset"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:layout_alignParentBottom="true">
            <FrameLayout android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:background="@drawable/rounded_settingsbox_outside" android:layout_width="160dp" android:layout_height="wrap_content" android:layout_margin="5dp">
                <LinearLayout android:orientation="horizontal" android:background="@drawable/rounded_settingsbox" android:padding="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="1dp" android:weightSum="1">
                    <TextView android:textSize="@dimen/default_text_size" android:textColor="@color/light_theme_text" android:textColorHint="@color/light_theme_text" android:gravity="center" android:id="@+id/search_toggle" android:background="@drawable/search_light" android:padding="4dp" android:focusable="true" android:nextFocusLeft="@+id/search_toggle" android:nextFocusRight="@+id/settings_toggle" android:nextFocusUp="@+id/grade_level_spinner" android:nextFocusDown="@+id/app_info" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/search_toggle" android:layout_weight="0.5" android:contentDescription="@string/search_toggle_a11y" android:nextFocusForward="@+id/settings_toggle"/>
                    <TextView android:textSize="@dimen/default_text_size" android:textColor="@color/collection_view_text" android:gravity="center" android:id="@+id/settings_toggle" android:background="@drawable/settings_dark" android:padding="4dp" android:focusable="true" android:nextFocusLeft="@+id/search_toggle" android:nextFocusRight="@+id/grid_view" android:nextFocusUp="@+id/grade_level_spinner" android:nextFocusDown="@+id/app_info" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/settings_toggle" android:layout_weight="0.5" android:contentDescription="@string/settings_toggle_a11y" android:nextFocusForward="@+id/app_info"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
                <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:paddingTop="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp" android:baselineAligned="false">
                    <FrameLayout android:gravity="bottom" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.8" android:layout_marginEnd="10dp">
                        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
                            <ImageView android:layout_gravity="bottom|left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/cu_logo" android:scaleType="fitStart" android:adjustViewBounds="true" android:maxHeight="40dp" android:importantForAccessibility="no"/>
                        </FrameLayout>
                    </FrameLayout>
                    <FrameLayout android:gravity="bottom" android:layout_gravity="bottom" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.2">
                        <FrameLayout android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end" android:id="@+id/app_info" android:background="@drawable/selectable_border" android:focusable="true" android:nextFocusLeft="@+id/search_toggle" android:nextFocusRight="@+id/grid_view" android:nextFocusUp="@+id/settings_toggle" android:nextFocusDown="@+id/grid_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/app_info_a11y" android:nextFocusForward="@+id/grid_view">
                            <ImageView android:gravity="center" android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end" android:background="@color/collection_view_background" android:focusable="false" android:layout_width="@dimen/app_info_size" android:layout_height="@dimen/app_info_size" android:layout_margin="2dp" android:src="@drawable/phet_info_icon"/>
                        </FrameLayout>
                    </FrameLayout>
                </LinearLayout>
                <ProgressBar android:layout_gravity="bottom" android:id="@+id/progress_bar" android:visibility="gone" android:layout_width="match_parent" android:layout_height="3dp" android:layout_marginBottom="5dp" android:max="@integer/progress_bar_max" android:progressDrawable="@drawable/progress_bar" android:animationResolution="1" style="@android:style/Widget.ProgressBar.Horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textSize="@dimen/large_text_size" android:gravity="center" android:id="@+id/no_results" android:padding="10dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/no_results" android:fillViewport="true" android:layout_weight="@integer/grid_layout_weight"/>
    <GridView android:id="@+id/grid_view" android:background="@color/grid_view_background" android:padding="10dp" android:nextFocusLeft="@+id/search_toggle" android:nextFocusRight="@+id/search_toggle" android:nextFocusUp="@+id/app_info" android:nextFocusDown="@+id/search_toggle" android:descendantFocusability="afterDescendants" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginTop="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp" android:fillViewport="true" android:layout_weight="@integer/grid_layout_weight" android:nextFocusForward="@+id/search_toggle"/>
</LinearLayout>
